--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PostgreSql": {
+    "DefaultConnection": "Host=localhost;Database=notes;Username=postgres;Password=",
+    "MigrateAutomatically": true
+  }
 }
